[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/MissileConnorCoffeeSpill.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill04.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill06.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill07.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill08.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill09.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Missiles/MissileB_Connor_Coffeespill11.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "spilling",
"speed": 12.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 191, 10 )

[node name="CoffeeSpill" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, 10 )
frames = SubResource( 1 )
animation = "spilling"
frame = 1
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 10 )
scale = Vector2( 1, 2.42308 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="HitTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_CoffeeSpill_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]


